Fixed broken styles in Calendar layout

--- a/public_html/layouts/basic/styles/layout/_Base.scss
+++ b/public_html/layouts/basic/styles/layout/_Base.scss
@@ -5,13 +5,12 @@
 	top: $h-header;
 	bottom: $h-footer;
 	width: 100%;
-	transform: translateZ(0);
 	overflow-x: hidden;
 }
 .c-btn-fixed {
 	bottom: $h-footer;
 }
-.basePanel[class$='_KnowledgeBase'] .contentsDiv {
+.basePanel[class$="_KnowledgeBase"] .contentsDiv {
 	min-height: calc(100vh - #{$h-header} - #{$h-footer});
 }
 .user-info--active {
@@ -19,7 +18,7 @@
 	.c-btn-fixed {
 		bottom: $h-footer-user-info;
 	}
-	.basePanel[class$='_KnowledgeBase'] .contentsDiv {
+	.basePanel[class$="_KnowledgeBase"] .contentsDiv {
 		min-height: calc(100vh - #{$h-header} - #{$h-footer-user-info});
 	}
 }
@@ -28,7 +27,7 @@
 	.c-btn-fixed {
 		bottom: $h-footer-limited;
 	}
-	.basePanel[class$='_KnowledgeBase'] .contentsDiv {
+	.basePanel[class$="_KnowledgeBase"] .contentsDiv {
 		min-height: calc(100vh - #{$h-header} - #{$h-footer-limited});
 	}
 }
@@ -38,7 +37,7 @@
 	.c-btn-fixed {
 		bottom: $h-footer;
 	}
-	.basePanel[class$='_KnowledgeBase'] .contentsDiv {
+	.basePanel[class$="_KnowledgeBase"] .contentsDiv {
 		min-height: calc(100vh - #{$h-header} - #{$h-footer});
 	}
 }
@@ -48,14 +47,14 @@
 	.c-btn-fixed {
 		bottom: $h-footer-limited;
 	}
-	.basePanel[class$='_KnowledgeBase'] .contentsDiv {
+	.basePanel[class$="_KnowledgeBase"] .contentsDiv {
 		min-height: calc(100vh - #{$h-header} - #{$h-footer-limited});
 	}
 	.user-info--active {
 		.mainBody {
 			bottom: $h-footer;
 		}
-		.basePanel[class$='_KnowledgeBase'] .contentsDiv {
+		.basePanel[class$="_KnowledgeBase"] .contentsDiv {
 			min-height: calc(100vh - #{$h-header} - #{$h-footer});
 		}
 	}
